<resources>
    <string name="app_name">MVP</string>

    <!--Using for f1_connect_device screen-->
    <string name="f1_connect_device">測定開始</string>

    <!--Using for f2_live_event screen-->
    <string name="f2_framelayout_title">f2_framelayout_title</string>
    <string name="f2_start_a_meal">食事開始</string>
    <string name="f2_end_of_a_meal">食事終了</string>
    <string name="f2_defecation_begins">排便開始</string>
    <string name="f2_defecation_select">便選択</string>
    <string name="f2_going_to_bed">就寝</string>
    <string name="f2_wake_up">起床</string>
    <string name="f2_symptom_occurrence">症状発生</string>
    <string name="f2_symptoms_disappearance">症状消失</string>

    <string name="f2_defecation_title">Defecation title</string>
    <string name="f2_defecation_item_1">Item 1</string>
    <string name="f2_defecation_item_2">Item 2</string>
    <string name="f2_defecation_item_3">Item 3</string>
    <string name="f2_defecation_item_4">Item 4</string>
    <string name="f2_defecation_item_5">Item 5</string>
    <string name="f2_defecation_item_6">Item 6</string>
    <string name="f2_defecation_item_7">Item 7</string>
    <string name="f2_defecation_item_8">Item 8</string>

    <!--Using for f3_sympton screen-->
    <string name="f3_symptom_selection">症状選択</string>

    <!--Using for f4_pain_place screen-->
    <string name="f4_pain_place_title">f4_pain_place_title</string>

    <!--Using for f5_pain_level screen-->
    <string name="f5_pain_level_title">Pain Level Title</string>
    <string name="f5_pain_level_item_1">Item 1</string>
    <string name="f5_pain_level_item_2">Item 2</string>
    <string name="f5_pain_level_item_3">Item 3</string>
    <string name="f5_pain_level_item_4">Item 4</string>
    <string name="f5_pain_level_item_5">Item 5</string>
    <string name="f5_pain_level_item_6">Item 6</string>

    <string name="f5_pain_level_selected_title">Pain Level Title Selected</string>
    <string name="f5_pain_level_selected_desc">desc</string>
    <string name="f5_pain_level_selected_status">status</string>
    <string name="f5_pain_level_delete_btn">症状消失</string>

</resources>
