<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@id/f2_defecation_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/f2_framelayout_eightitems"
        android:layout_centerHorizontal="true"
        android:text="@string/f2_framelayout_title" />

    <LinearLayout
        android:id="@id/f2_framelayout_eightitems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_a_meal_start"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:orientation="vertical"
                app:text="@string/f2_defecation_item_1" />

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:orientation="vertical"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:text="@string/f2_defecation_item_2" />

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_a_meal_start"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:smallIconPosition="right"
                app:text="@string/f2_defecation_item_3" />

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_a_meal_start"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:smallIconPosition="right"
                app:text="@string/f2_defecation_item_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_a_meal_start"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:orientation="vertical"
                app:text="@string/f2_defecation_item_5" />

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:orientation="vertical"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:text="@string/f2_defecation_item_6" />

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_a_meal_start"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:smallIconPosition="right"
                app:text="@string/f2_defecation_item_7" />

            <com.ifi.kuirin.mvp.base.view.RectangleView
                android:id="@id/f2_framelayout_defecatopn_8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_a_meal_start"
                app:smallIcon="@mipmap/ic_launcher_round"
                app:smallIconPosition="right"
                app:text="@string/f2_defecation_item_8" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
