<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@id/f5_pain_level_selected_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/f5_pain_level_selected_title"/>

    <TextView
        android:id="@id/f5_pain_level_selected_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/f5_pain_level_selected_desc"
        android:layout_below="@+id/f5_pain_level_selected_title"/>

    <ImageView
        android:id="@id/f5_pain_level_selected_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/f5_pain_level_selected_desc"/>

    <TextView
        android:id="@id/f5_pain_level_selected_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/f5_pain_level_selected_status"
        android:layout_below="@+id/f5_pain_level_selected_image"/>

    <Button
        android:id="@id/f5_pain_level_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f5_pain_level_delete_btn"
        android:layout_below="@+id/f5_pain_level_selected_status"/>
</RelativeLayout>
